0.1.0 - January 11th 2012
* Tentative Heroku support.

0.0.1 - December 27th 2011
* Initial release - nothing particularly functional, just claiming the name on rubygems.org.